# Cargo项目配置文件
[package]
name = "nexa-lang"                    # 项目名称
version = "0.1.0"                     # 项目版本
edition = "2021"                       # Rust版本
authors = ["Your Name <your.email@example.com>"]  # 作者信息
description = "Nexa Programming Language Compiler"  # 项目描述
license = "MIT"                        # 许可证

# 项目依赖项
[dependencies]
nom = "7.0"          # 解析器组合子库，用于词法分析和语法分析
colored = "2.0"       # 彩色控制台输出库，用于美化终端显示
